fix(Atom): prevent blinking cursor in blurred inputs

--- a/Atom/.atom/styles.less
+++ b/Atom/.atom/styles.less
@@ -15,7 +15,7 @@ atom-text-editor.editor .invisible-character {
   color: @syntax-background-color;
 }
 
-atom-text-editor, atom-text-editor {
+atom-text-editor.is-focused {
   .cursors.blink-off .cursor {
     opacity: 1;
   }
